--- a/index.html
+++ b/index.html
@@ -248,7 +248,10 @@
       // Spawn a fly-through logo inside the clicked card
       if(card){
         const fly=document.createElement('img');
-        fly.src='assets/lulle.png'; fly.alt=''; fly.className='fly-logo';
+        fly.src = '/assets/lulle.png';
+        fly.alt = 'Lulle Logo';
+        fly.className = 'fly-logo';
+
         card.appendChild(fly);
         setTimeout(()=>fly.remove(), 900);
       }
