--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <!-- Logo (libellule) styles — chargé mais pas utilisé tant que tu n’ajoutes pas le markup -->
   <link rel="stylesheet" href="libellule.css">
+  <link rel="icon" type="image/png" href="assets/logo.png" />
+
 </head>
 <body>
 <header>
